<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cart"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_weight="1.53"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TableRow
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.5"
                android:background="#FFFFFF"
                android:paddingBottom="1dip"
                android:paddingLeft="1dip"
                android:paddingTop="1dip" >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:background="#33B5E5"
                    android:gravity="center"
                    android:paddingRight="3dp"
                    android:text="@string/name"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.2"
                android:background="#FFFFFF"
                android:paddingBottom="1dip"
                android:paddingLeft="1dip"
                android:paddingTop="1dip" >

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.5"
                    android:background="#33B5E5"
                    android:gravity="center"
                    android:paddingRight="3dp"
                    android:text="@string/quantity"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:background="#FFFFFF"
                android:paddingBottom="1dip"
                android:paddingLeft="1dip"
                android:paddingRight="1dip"
                android:paddingTop="1dip" >

                <TextView
                    android:id="@+id/total"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.75"
                    android:background="#33B5E5"
                    android:gravity="center"
                    android:paddingRight="3dp"
                    android:textSize="12sp"
                    android:text="@string/unit_price"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
        </LinearLayout>

        <ListView
            android:id="@+id/sale_List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/clearButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_red"
            android:text="@string/clear" />

        <Button
            android:id="@+id/endButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_green"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>